--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
                 <h1>THE DINDLER</h1>
             </header>
         </div>
+        <h2>OPTIONS</h2>
         <form class="options">
-            <h2>OPTIONS</h2>
             <section class="source-list option-list">
                 <h3>Source Materials</h3>
                 <div class="option-container option-block source-container">
@@ -162,7 +162,7 @@
             </section>
             <hr class="rounded divider">
             <section class="text-container option-list">
-                <h3>Character Level</h3>
+                <h3>Level Range</h3>
                 <div class="option-container level-container">
                     <input id="minlev" name="minlev" value=0 type="number" min="0" max="20">
                     <label for="minlev">Minimum Level</label>
@@ -171,7 +171,7 @@
                     <input id="maxlev" name="maxlev" value=0 type="number" min="0" max="20">
                     <label for="maxlev">Maximum Level</label>
                 </div>
-                <p>(Leave both 0 for random, will be equal to minimum if min > max)</p>
+                <p>(Leave both 0 for random, set both equal for explicit. Will be equal to minimum if min > max)</p>
             </section>
             <hr class="rounded divider">
             <section class="other-container option-list">
