--- a/src/custom.html
+++ b/src/custom.html
@@ -4,6 +4,7 @@
         <script language ="JavaScript" src="js/mouseOver.js" type="text/javascript" rel="" async></script>
         <script language ="JavaScript" src="js/toggleOptionViz.js" type="text/javascript" rel="" async></script>
         <script language ="JavaScript" src="js/toggleManyOptions.js" type="text/javascript" rel=""></script>
+        <!--<script language ="JavaScript" src="js/submitForm.mjs" type="module" rel=""></script>-->
     </head>
     <body>
         <section class="header">
@@ -11,79 +12,84 @@
                 <h1>THE DINDLER</h1>
             </header>
         </div>
-        <h2>OPTIONS</h2>
-        <form class="options">
+        <h2>CUSTOM OPTIONS</h2>
+        <form class="goBack" id="goBackForm" action="/" method="GET">
+            <button type="submit" class="" id="submitBtn" name="">
+                Never mind, I want random min.
+            </button>
+        </form>
+        <form class="options" id="optionForm" action="/custom" method="POST">
             <section class="source-list option-list">
                 <h3>Source Materials</h3>
                 <div class="option-container option-block source-container">
-                    <input type="checkbox" id="PHB" name="source-option" value="PHB" class="hidden" checked oninput="toggleOptionViz('PHB', 'class-container', 'arti-container')">
+                    <input type="checkbox" id="PHB" name="PHB-option" class="source-option hidden" checked oninput="toggleOptionViz('PHB', 'class-container', 'arti')">
                     <label for="PHB" onmouseover="mouseOver('PHB')">Player's Handbook</label>
                 </div>
                 <div class="option-row">
                     <div class="option-container source-container" id="DIA-container">
-                        <input type="checkbox" id="DIA" name="source-option" value="DIA" class="hidden" checked>
+                        <input type="checkbox" id="DIA" name="DIA-option" class="source-option hidden" checked>
                         <label for="DIA" onmouseover="mouseOver('DIA')">Baldur's Gate: Descent into Avernus</label>
                     </div>
                     <div class="option-container source-container" id="COS-container">
-                        <input type="checkbox" id="COS" name="source-option" value="COS" class="hidden" checked>
+                        <input type="checkbox" id="COS" name="COS-option" class="source-option hidden" checked>
                         <label for="COS" onmouseover="mouseOver('COS')">Curse of Strahd</label>
                     </div>
                     <div class="option-container source-container" id="EEP-container">
-                        <input type="checkbox" id="EEP" name="source-option" value="EEP" class="hidden" checked>
+                        <input type="checkbox" id="EEP" name="EEP-option" class="source-option hidden" checked>
                         <label for="EEP" onmouseover="mouseOver('EEP')">Elemental Evil Player's Companion</label>
                     </div>
                     <div class="option-container source-container" id="GOS-container">
-                        <input type="checkbox" id="GOS" name="source-option" value="GOS" class="hidden" checked>
+                        <input type="checkbox" id="GOS" name="GOS-option" class="source-option hidden" checked>
                         <label for="GOS" onmouseover="mouseOver('GOS')">Ghosts of Saltmarsh</label>
                     </div>
                     <div class="option-container source-container" id="MTF-container">
-                        <input type="checkbox" id="MTF" name="source-option" value="MTF" class="hidden" checked>
+                        <input type="checkbox" id="MTF" name="MTF-option" class="source-option hidden" checked>
                         <label for="MTF" onmouseover="mouseOver('MTF')">Mordenkainen's Tome of Foes</label>
                     </div>
                     <div class="option-container source-container" id="SWAG-container">
-                        <input type="checkbox" id="SWAG" name="source-option" value="SWAG" class="hidden" checked>
+                        <input type="checkbox" id="SWAG" name="SWAG-option" class="source-option hidden" checked>
                         <label for="SWAG" onmouseover="mouseOver('SWAG')">Sword Coast Adventurer's Guide</label>
                     </div>
                     <div class="option-container source-container" id="TCE-container">
-                        <input type="checkbox" id="TCE" name="source-option" value="TCE" class="hidden" oninput="toggleOptionViz('TCE', '', 'arti-container')" checked>
+                        <input type="checkbox" id="TCE" name="TCE-option" class="source-option hidden" oninput="toggleOptionViz('TCE', '', 'arti-container')" checked>
                         <label for="TCE" onmouseover="mouseOver('TCE')">Tasha's Cauldron of Everything</label>
                     </div>
                     <div class="option-container source-container" id="TOA-container">
-                        <input type="checkbox" id="TOA" name="source-option" value="TOA" class="hidden" checked>
+                        <input type="checkbox" id="TOA" name="TOA-option" class="source-option hidden" checked>
                         <label for="TOA" onmouseover="mouseOver('TOA')">Tomb of Annihilation</label>
                     </div>
                     <div class="option-container source-container" id="VOLO-container">
-                        <input type="checkbox" id="VOLO" name="source-option" value="VOLO" class="hidden" checked>
+                        <input type="checkbox" id="VOLO" name="VOLO-option" class="source-option hidden" checked>
                         <label for="VOLO" onmouseover="mouseOver('VOLO')">Volo's Guide to Monsters</label>
                     </div>
                     <div class="option-container source-container" id="WILD-container">
-                        <input type="checkbox" id="WILD" name="source-option" value="WILD" class="hidden" checked>
+                        <input type="checkbox" id="WILD" name="WILD-option" class="source-option hidden" checked>
                         <label for="WILD" onmouseover="mouseOver('WILD')">Wild Beyond the Witchlight</label>
                     </div>
                     <div class="option-container source-container" id="XAN-container">
-                        <input type="checkbox" id="XAN" name="source-option" value="XAN" class="hidden" checked>
+                        <input type="checkbox" id="XAN" name="XAN-option" class="source-option hidden" checked>
                         <label for="XAN" onmouseover="mouseOver('XAN')">Xanathar's Guide to Everything</label>
                     </div>
                 </div>
                 <div class="option-row">
                     <div class="option-container source-container" id="AI-container">
-                        <input type="checkbox" id="AI" name="source-option" value="AI" class="hidden">
+                        <input type="checkbox" id="AI" name="AI-option" class="source-option hidden">
                         <label for="AI" onmouseover="mouseOver('AI')">Acquistions Incorporated</label>
                     </div>
                     <div class="option-container source-container" id="EBE-container">
-                        <input type="checkbox" id="EBE" name="source-option" value="EBE" class="hidden">
+                        <input type="checkbox" id="EBE" name="EBE-option" class="source-option hidden">
                         <label for="EBE" onmouseover="mouseOver('EBE')">Eberron: Rising from the Last War</label>
                     </div>
                     <div class="option-container source-container" id="EGW-container">
-                        <input type="checkbox" id="EGW" name="source-option" value="EGW" class="hidden">
+                        <input type="checkbox" id="EGW" name="EGW-option" class="source-option hidden">
                         <label for="EGW" onmouseover="mouseOver('EGW')">Explorer's Guide to Wildemount</label>
                     </div>
                     <div class="option-container source-container" id="RAV-container">
-                        <input type="checkbox" id="RAV" name="source-option" value="RAV" class="hidden">
+                        <input type="checkbox" id="RAV" name="RAV-option" class="source-option hidden">
                         <label for="RAV" onmouseover="mouseOver('RAV')">Guildmasters' Guide to Ravnica</label>
                     </div>
                     <div class="option-container source-container" id="MOT-container">
-                        <input type="checkbox" id="MOT" name="source-option" value="MOT" class="hidden">
+                        <input type="checkbox" id="MOT" name="MOT-option" class="source-option hidden">
                         <label for="MOT" onmouseover="mouseOver('MOT')">Mythic Odysseys of Theros</label>
                     </div>
                 </div>
@@ -102,51 +108,51 @@
                 <h3>Classes</h3>
                 <div class="option-row">
                     <div class="option-container class-container" id="arti-container">
-                        <input type="checkbox" id="arti" name="class-option" value="arti" class="hidden">
+                        <input type="checkbox" id="arti" name="arti-option" class="class-option hidden">
                         <label for="arti" onmouseover="mouseOver('arti')">Artificer</label>
                     </div>
                     <div class="option-container class-container" id="barb-container">
-                        <input type="checkbox" id="barb" name="class-option" value="barb" class="hidden" checked>
+                        <input type="checkbox" id="barb" name="barb-option" class="class-option hidden" checked>
                         <label for="barb" onmouseover="mouseOver('barb')">Barbarian</label>
                     </div>
                     <div class="option-container class-container" id="cler-container">
-                        <input type="checkbox" id="cler" name="class-option" value="cler" class="hidden" checked>
+                        <input type="checkbox" id="cler" name="cler-option" class="class-option hidden" checked>
                         <label for="cler" onmouseover="mouseOver('cler')">Cleric</label>
                     </div>
                     <div class="option-container class-container" id="drui-container">
-                        <input type="checkbox" id="drui" name="class-option" value="drui" class="hidden" checked>
+                        <input type="checkbox" id="drui" name="drui-option" class="class-option hidden" checked>
                         <label for="drui" onmouseover="mouseOver('drui')">Druid</label>
                     </div>
                     <div class="option-container class-container" id="figh-container">
-                        <input type="checkbox" id="figh" name="class-option" value="figh" class="hidden" checked>
+                        <input type="checkbox" id="figh" name="figh-option" class="class-option hidden" checked>
                         <label for="figh" onmouseover="mouseOver('figh')">Fighter</label>
                     </div>
                     <div class="option-container class-container" id="monk-container">
-                        <input type="checkbox" id="monk" name="class-option" value="monk" class="hidden" checked>
+                        <input type="checkbox" id="monk" name="monk-option" class="class-option hidden" checked>
                         <label for="monk" onmouseover="mouseOver('monk')">Monk</label>
                     </div>
                     <div class="option-container class-container" id="pala-container">
-                        <input type="checkbox" id="pala" name="class-option" value="pala" class="hidden" checked>
+                        <input type="checkbox" id="pala" name="pala-option" class="class-option hidden" checked>
                         <label for="pala" onmouseover="mouseOver('pala')">Paladin</label>
                     </div>
                     <div class="option-container class-container" id="rang-container">
-                        <input type="checkbox" id="rang" name="class-option" value="rang" class="hidden" checked>
+                        <input type="checkbox" id="rang" name="rang-option" class="class-option hidden" checked>
                         <label for="rang" onmouseover="mouseOver('rang')">Ranger</label>
                     </div>
                     <div class="option-container class-container" id="rogu-container">
-                        <input type="checkbox" id="rogu" name="class-option" value="rogu" class="hidden" checked>
+                        <input type="checkbox" id="rogu" name="rogu-option" class="class-option hidden" checked>
                         <label for="rogu" onmouseover="mouseOver('rogu')">Rogue</label>
                     </div>
                     <div class="option-container class-container" id="sorc-container">
-                        <input type="checkbox" id="sorc" name="class-option" value="sorc" class="hidden" checked>
+                        <input type="checkbox" id="sorc" name="sorc-option" class="class-option hidden" checked>
                         <label for="sorc" onmouseover="mouseOver('sorc')">Sorcerer</label>
                     </div>
                     <div class="option-container class-container" id="warl-container">
-                        <input type="checkbox" id="warl" name="class-option" value="warl" class="hidden" checked>
+                        <input type="checkbox" id="warl" name="warl-option" class="class-option hidden" checked>
                         <label for="warl" onmouseover="mouseOver('warl')">Warlock</label>
                     </div>
                     <div class="option-container class-container" id="wiza-container">
-                        <input type="checkbox" id="wiza" name="class-option" value="wiza" class="hidden" checked>
+                        <input type="checkbox" id="wiza" name="wiza-option" class="class-option hidden" checked>
                         <label for="wiza" onmouseover="mouseOver('wiza')">Wizard</label>
                     </div>
                 </div>
@@ -177,12 +183,14 @@
             <section class="other-container option-list">
                 <h3>Other</h3>
                 <div class="option-container">
-                    <input type="checkbox" id="weight" name="misc-option" value="weight" class="hidden" checked>
+                    <input type="checkbox" id="weight" name="misc-option" class="class-option hidden" checked>
                     <label for="weight" onmouseover="mouseOver('weight')">Class-weighted stats?</label>
                 </div>
             </section>
             <div class="option-container submit-container">
-                <input class="" id="submit" name="submit" type="submit" value="SUBMIT">
+                <button type="submit" class="" id="submitBtn" name="submit">
+                    SUBMIT
+                </button>
             </div>
         </form>
     </body>
