express routing, random generator display

--- a/src/custom.html
+++ b/src/custom.html
@@ -22,75 +22,91 @@
             <section class="source-list option-list">
                 <h3>Source Materials</h3>
                 <div class="option-container option-block source-container">
-                    <input type="checkbox" id="PHB" name="PHB-option" class="source-option hidden" checked oninput="toggleOptionViz('PHB', 'class-container', 'arti')">
+                    <input type="checkbox" id="PHB" name="PHB" class="source-option hidden" checked oninput="toggleOptionViz('PHB', 'class-container', 'arti')">
                     <label for="PHB" onmouseover="mouseOver('PHB')">Player's Handbook</label>
                 </div>
                 <div class="option-row">
                     <div class="option-container source-container" id="DIA-container">
-                        <input type="checkbox" id="DIA" name="DIA-option" class="source-option hidden" checked>
-                        <label for="DIA" onmouseover="mouseOver('DIA')">Baldur's Gate: Descent into Avernus</label>
+                        <input type="checkbox" id="DIA" name="DIA" class="source-option hidden" checked>
+                        <label for="DIA" onmouseover="mouseOver('DIA')">Baldur's Gate - Descent into Avernus</label>
                     </div>
                     <div class="option-container source-container" id="COS-container">
-                        <input type="checkbox" id="COS" name="COS-option" class="source-option hidden" checked>
+                        <input type="checkbox" id="COS" name="COS" class="source-option hidden" checked>
                         <label for="COS" onmouseover="mouseOver('COS')">Curse of Strahd</label>
                     </div>
                     <div class="option-container source-container" id="EEP-container">
-                        <input type="checkbox" id="EEP" name="EEP-option" class="source-option hidden" checked>
+                        <input type="checkbox" id="EEP" name="EEP" class="source-option hidden" checked>
                         <label for="EEP" onmouseover="mouseOver('EEP')">Elemental Evil Player's Companion</label>
                     </div>
                     <div class="option-container source-container" id="GOS-container">
-                        <input type="checkbox" id="GOS" name="GOS-option" class="source-option hidden" checked>
+                        <input type="checkbox" id="GOS" name="GOS" class="source-option hidden" checked>
                         <label for="GOS" onmouseover="mouseOver('GOS')">Ghosts of Saltmarsh</label>
                     </div>
                     <div class="option-container source-container" id="MTF-container">
-                        <input type="checkbox" id="MTF" name="MTF-option" class="source-option hidden" checked>
+                        <input type="checkbox" id="MTF" name="MTF" class="source-option hidden" checked>
                         <label for="MTF" onmouseover="mouseOver('MTF')">Mordenkainen's Tome of Foes</label>
                     </div>
                     <div class="option-container source-container" id="SWAG-container">
-                        <input type="checkbox" id="SWAG" name="SWAG-option" class="source-option hidden" checked>
-                        <label for="SWAG" onmouseover="mouseOver('SWAG')">Sword Coast Adventurer's Guide</label>
+                        <input type="checkbox" id="SWAG" name="SWA" class="source-option hidden" checked>
+                        <label for="SWAG" onmouseover="mouseOver('SWA')">Sword Coast Adventurer's Guide</label>
                     </div>
                     <div class="option-container source-container" id="TCE-container">
-                        <input type="checkbox" id="TCE" name="TCE-option" class="source-option hidden" oninput="toggleOptionViz('TCE', '', 'arti-container')" checked>
+                        <input type="checkbox" id="TCE" name="TCE" class="source-option hidden" oninput="toggleOptionViz('TCE', '', 'arti-container')" checked>
                         <label for="TCE" onmouseover="mouseOver('TCE')">Tasha's Cauldron of Everything</label>
                     </div>
                     <div class="option-container source-container" id="TOA-container">
-                        <input type="checkbox" id="TOA" name="TOA-option" class="source-option hidden" checked>
+                        <input type="checkbox" id="TOA" name="TOA" class="source-option hidden" checked>
                         <label for="TOA" onmouseover="mouseOver('TOA')">Tomb of Annihilation</label>
                     </div>
                     <div class="option-container source-container" id="VOLO-container">
-                        <input type="checkbox" id="VOLO" name="VOLO-option" class="source-option hidden" checked>
-                        <label for="VOLO" onmouseover="mouseOver('VOLO')">Volo's Guide to Monsters</label>
+                        <input type="checkbox" id="VOLO" name="VOL" class="source-option hidden" checked>
+                        <label for="VOLO" onmouseover="mouseOver('VOL')">Volo's Guide to Monsters</label>
                     </div>
                     <div class="option-container source-container" id="WILD-container">
-                        <input type="checkbox" id="WILD" name="WILD-option" class="source-option hidden" checked>
-                        <label for="WILD" onmouseover="mouseOver('WILD')">Wild Beyond the Witchlight</label>
+                        <input type="checkbox" id="WILD" name="WLD" class="source-option hidden" checked>
+                        <label for="WILD" onmouseover="mouseOver('WLD')">Wild Beyond the Witchlight</label>
                     </div>
                     <div class="option-container source-container" id="XAN-container">
-                        <input type="checkbox" id="XAN" name="XAN-option" class="source-option hidden" checked>
+                        <input type="checkbox" id="XAN" name="XAN" class="source-option hidden" checked>
                         <label for="XAN" onmouseover="mouseOver('XAN')">Xanathar's Guide to Everything</label>
                     </div>
                 </div>
                 <div class="option-row">
                     <div class="option-container source-container" id="AI-container">
-                        <input type="checkbox" id="AI" name="AI-option" class="source-option hidden">
-                        <label for="AI" onmouseover="mouseOver('AI')">Acquistions Incorporated</label>
+                        <input type="checkbox" id="AI" name="AIN" class="source-option hidden">
+                        <label for="AI" onmouseover="mouseOver('AIN')">Acquistions Incorporated</label>
                     </div>
                     <div class="option-container source-container" id="EBE-container">
-                        <input type="checkbox" id="EBE" name="EBE-option" class="source-option hidden">
-                        <label for="EBE" onmouseover="mouseOver('EBE')">Eberron: Rising from the Last War</label>
+                        <input type="checkbox" id="EBE" name="EBE" class="source-option hidden">
+                        <label for="EBE" onmouseover="mouseOver('EBE')">Eberron - Rising from the Last War</label>
                     </div>
                     <div class="option-container source-container" id="EGW-container">
-                        <input type="checkbox" id="EGW" name="EGW-option" class="source-option hidden">
+                        <input type="checkbox" id="EGW" name="EGW" class="source-option hidden">
                         <label for="EGW" onmouseover="mouseOver('EGW')">Explorer's Guide to Wildemount</label>
                     </div>
                     <div class="option-container source-container" id="RAV-container">
-                        <input type="checkbox" id="RAV" name="RAV-option" class="source-option hidden">
+                        <input type="checkbox" id="RAV" name="RAV" class="source-option hidden">
                         <label for="RAV" onmouseover="mouseOver('RAV')">Guildmasters' Guide to Ravnica</label>
                     </div>
+                    <div class="option-container source-container" id="MBB-container">
+                        <input type="checkbox" id="MBB" name="MBB" class="source-option hidden">
+                        <label for="MBB" onmouseover="mouseOver('MBB')">Mulmaster Bonds and Backgrounds</label>
+                    </div>
                     <div class="option-container source-container" id="MOT-container">
-                        <input type="checkbox" id="MOT" name="MOT-option" class="source-option hidden">
+                        <input type="checkbox" id="MOT" name="MOT" class="source-option hidden">
                         <label for="MOT" onmouseover="mouseOver('MOT')">Mythic Odysseys of Theros</label>
+                    </div>
+                    <div class="option-container source-container" id="PSA-container">
+                        <input type="checkbox" id="PSA" name="PSA" class="source-option hidden">
+                        <label for="PSA" onmouseover="mouseOver('PSA')">Planeshift - Amonkhet</label>
+                    </div>
+                    <div class="option-container source-container" id="PSI-container">
+                        <input type="checkbox" id="PSI" name="PSI" class="source-option hidden">
+                        <label for="PSI" onmouseover="mouseOver('PSI')">Planeshift - Innistrad</label>
+                    </div>
+                    <div class="option-container source-container" id="SOH-container">
+                        <input type="checkbox" id="SOH" name="SOH" class="source-option hidden">
+                        <label for="SOH" onmouseover="mouseOver('SOH')">State of Hillsfar</label>
                     </div>
                 </div>
                 <div class="option-container select-container">
@@ -108,51 +124,51 @@
                 <h3>Classes</h3>
                 <div class="option-row">
                     <div class="option-container class-container" id="arti-container">
-                        <input type="checkbox" id="arti" name="arti-option" class="class-option hidden">
+                        <input type="checkbox" id="arti" name="Artificer" class="class-option hidden">
                         <label for="arti" onmouseover="mouseOver('arti')">Artificer</label>
                     </div>
                     <div class="option-container class-container" id="barb-container">
-                        <input type="checkbox" id="barb" name="barb-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="barb" name="Barbarian" class="class-option hidden" checked>
                         <label for="barb" onmouseover="mouseOver('barb')">Barbarian</label>
                     </div>
                     <div class="option-container class-container" id="cler-container">
-                        <input type="checkbox" id="cler" name="cler-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="cler" name="Cleric" class="class-option hidden" checked>
                         <label for="cler" onmouseover="mouseOver('cler')">Cleric</label>
                     </div>
                     <div class="option-container class-container" id="drui-container">
-                        <input type="checkbox" id="drui" name="drui-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="drui" name="Druid" class="class-option hidden" checked>
                         <label for="drui" onmouseover="mouseOver('drui')">Druid</label>
                     </div>
                     <div class="option-container class-container" id="figh-container">
-                        <input type="checkbox" id="figh" name="figh-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="figh" name="Fighter" class="class-option hidden" checked>
                         <label for="figh" onmouseover="mouseOver('figh')">Fighter</label>
                     </div>
                     <div class="option-container class-container" id="monk-container">
-                        <input type="checkbox" id="monk" name="monk-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="monk" name="Monk" class="class-option hidden" checked>
                         <label for="monk" onmouseover="mouseOver('monk')">Monk</label>
                     </div>
                     <div class="option-container class-container" id="pala-container">
-                        <input type="checkbox" id="pala" name="pala-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="pala" name="Paladin" class="class-option hidden" checked>
                         <label for="pala" onmouseover="mouseOver('pala')">Paladin</label>
                     </div>
                     <div class="option-container class-container" id="rang-container">
-                        <input type="checkbox" id="rang" name="rang-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="rang" name="Ranger" class="class-option hidden" checked>
                         <label for="rang" onmouseover="mouseOver('rang')">Ranger</label>
                     </div>
                     <div class="option-container class-container" id="rogu-container">
-                        <input type="checkbox" id="rogu" name="rogu-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="rogu" name="Rogue" class="class-option hidden" checked>
                         <label for="rogu" onmouseover="mouseOver('rogu')">Rogue</label>
                     </div>
                     <div class="option-container class-container" id="sorc-container">
-                        <input type="checkbox" id="sorc" name="sorc-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="sorc" name="Sorcerer" class="class-option hidden" checked>
                         <label for="sorc" onmouseover="mouseOver('sorc')">Sorcerer</label>
                     </div>
                     <div class="option-container class-container" id="warl-container">
-                        <input type="checkbox" id="warl" name="warl-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="warl" name="Warlock" class="class-option hidden" checked>
                         <label for="warl" onmouseover="mouseOver('warl')">Warlock</label>
                     </div>
                     <div class="option-container class-container" id="wiza-container">
-                        <input type="checkbox" id="wiza" name="wiza-option" class="class-option hidden" checked>
+                        <input type="checkbox" id="wiza" name="Wizard" class="class-option hidden" checked>
                         <label for="wiza" onmouseover="mouseOver('wiza')">Wizard</label>
                     </div>
                 </div>
@@ -183,7 +199,7 @@
             <section class="other-container option-list">
                 <h3>Other</h3>
                 <div class="option-container">
-                    <input type="checkbox" id="weight" name="misc-option" class="class-option hidden" checked>
+                    <input type="checkbox" id="weight" name="weighted stats" class="class-option hidden" checked>
                     <label for="weight" onmouseover="mouseOver('weight')">Class-weighted stats?</label>
                 </div>
             </section>
