--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                 </button>
             </div>
         </form>
-        <form id="wantCustom" action="/custom.html">
+        <form id="wantCustom" action="/custom">
             <div class="submit-container">
                 <button type="submit" class="" id="customBtn" name="">
                     I want to choose things
