fix wonk's mistakes

--- a/src/custom.html
+++ b/src/custom.html
@@ -9,11 +9,16 @@
     <body>
         <section class="header">
             <header>
-                <h1>THE DINDLER</h1>
+                <h1>THE DNDLER</h1>
             </header>
         </div>
         <h2>CUSTOM OPTIONS</h2>
         <form class="goBack" id="goBackForm" action="/" method="GET">
+            <button type="submit" class="" id="submitBtn" name="">
+                HOME
+            </button>
+        </form>
+        <form class="goRando" id="goRandoForm" action="/" method="GET">
             <button type="submit" class="" id="submitBtn" name="">
                 Never mind, I want random min.
             </button>
