--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <body>
         <section class="header">
             <header>
-                <h1>THE DINDLER</h1>
+                <h1>THE DNDLER</h1>
             </header>
         </div>
         <form class="generate" id="generateForm" action="/" method="POST">
